[package]
name = "hugo-manager"
version = "0.1.0"
edition = "2021"
description = "A GUI manager for Hugo blogs"
license = "MIT"

[dependencies]
eframe = "0.28"  # egui framework
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
open = "5.0"
rfd = "0.14"  # 文件对话框
trash = "4.0"  # 回收站功能

[profile.release]
opt-level = 2
lto = true
